# memory_manager_test

./: Cargo.toml
benches/: bench.rs
src/: lib.rs  logger.rs  main.rs  memory_manager.rs  u48.rs
src/pages/: any_page.rs  config_page.rs  free_list_page.rs  from_slice.rs  generic_page.rs  mod.rs  page_manager.rs
tests/: pagemanager.rs
