[package]
name = "memory_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
criterion = "0.5.1"
measure_time = "0.8.2"
memmap = "0.7.0"
memmap2 = "0.9.0"
once_cell = "1.18.0"
ran = "1.1.2"
rand = "0.8.5"
rayon = "1.8.0"
slog = "2.7.0"
slog-term = "2.9.0"

[[bench]]
name = "bench"
harness = false
